adding initial notebook

--- a/notebooks/1.0-JES-API-struggle.ipynb
+++ b/notebooks/1.0-JES-API-struggle.ipynb
@@ -87,17 +87,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 75,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "https://data.cdc.gov/resource/x9gk-5huc.json?$$app_token=nqHvS7mhDaw8hDm5xuC3Xuksg&$where=mmwr_week='08' AND mmwr_year='2024'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Calculate the previous month's MMWR week and year (This is a placeholder - you'll need to determine the actual logic based on MMWR calendar)\n",
     "last_month = datetime.now().replace(day=1) - timedelta(days=1)\n",
@@ -107,22 +99,14 @@
     "# You'll need to replace 'MMWR_WEEK' and 'MMWR_YEAR' with actual fields from the dataset if they're different\n",
     "url = f\"https://data.cdc.gov/resource/x9gk-5huc.json?$$app_token={nndss_app_token}&$where=mmwr_week='{mmwr_week}' AND mmwr_year='{mmwr_year}'\"\n",
     "\n",
-    "print(url)"
+    "#print(url)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 76,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "https://data.cdc.gov/resource/x9gk-5huc.json?$$app_token=nqHvS7mhDaw8hDm5xuC3Xuksg&$where=year='2024' AND week='2' AND states='VIRGINIA' AND label='Campylobacteriosis'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "year = 2024\n",
     "week = 2\n",
@@ -131,7 +115,7 @@
     "\n",
     "query_url = f\"https://data.cdc.gov/resource/x9gk-5huc.json?$$app_token={nndss_app_token}&$where=year='{year}' AND week='{week}' AND states='{state}' AND label='{label}'\"\n",
     "\n",
-    "print(query_url)"
+    "#print(query_url)"
    ]
   },
   {
@@ -1504,6 +1488,13 @@
     "df['new_cases'] = df.new_cases.fillna(0)\n",
     "df['new_cases'] = df.new_cases.astype(int)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
