--- a/notebooks/1.0-JES-DeepAR_Sagemaker.ipynb
+++ b/notebooks/1.0-JES-DeepAR_Sagemaker.ipynb
@@ -107,10 +107,10 @@
     "#sql_query = \"\"\"\n",
     "#SELECT * FROM (\n",
     "#    SELECT item_id, year, week, date, label, new_cases\n",
-    "#    FROM weekly\n",
+    "#    FROM historical\n",
     "#    UNION ALL\n",
     "#    SELECT item_id, year, week, date, label, new_cases\n",
-    "#    FROM weekly_staging\n",
+    "#    FROM weekly\n",
     "#) AS combined_data\n",
     "#\"\"\"\n",
     "\n",
@@ -627,6 +627,7 @@
     "deepar = Estimator(\n",
     "    container,\n",
     "    role,\n",
+    "        use_spot_instances=True,\n",
     "    instance_count=1,\n",
     "    instance_type='ml.c4.xlarge',\n",
     "    output_path=f's3://{output_bucket}/deepar/output',\n",
